# aula-f87pro

./: .gitignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/: main.py
src/aula-f87pro/: cli.py  colors.py  config.py  device.py
src/f87pro/: cli.py  colors.py  config.py  device.py  pywal.py
